--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/PabloDerluk88/react-resto-app",
+  "homepage": "https://pabloderluk88.github.io/react-resto-app/",
   "name": "restoapp",
   "version": "0.1.0",
   "private": true,
